[gd_scene load_steps=7 format=3 uid="uid://d15v1m0f60r81"]

[ext_resource type="Script" path="res://scenes/game/components/ground.gd" id="1_xka7d"]
[ext_resource type="Texture2D" uid="uid://majifcdsi8xh" path="res://assets/sprite_sheet.png" id="2_vyplm"]
[ext_resource type="Script" path="res://scenes/game/components/click_rect.gd" id="4_xqgbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_70avv"]
atlas = ExtResource("2_vyplm")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x11bp"]
atlas = ExtResource("2_vyplm")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fg1s"]
atlas = ExtResource("2_vyplm")
region = Rect2(0, 0, 128, 128)

[node name="Ground" type="Node2D" groups=["ground"]]
script = ExtResource("1_xka7d")

[node name="LightedGround" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_70avv")

[node name="Shadow" type="Sprite2D" parent="LightedGround"]
show_behind_parent = true
position = Vector2(-8, 4)
texture = SubResource("AtlasTexture_x11bp")

[node name="NormalGround" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_4fg1s")

[node name="Shadow" type="Sprite2D" parent="NormalGround"]
show_behind_parent = true
position = Vector2(-8, 4)
texture = SubResource("AtlasTexture_x11bp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-56, -56, 56, -56, 56, 56, -56, 56, -56, 48, 48, 48, 48, -48, -48, -48, -48, 40, -56, 40)

[node name="GroundClickRect" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(1, 1, 1, 0)
script = ExtResource("4_xqgbn")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
